ros_ws/log/build_2026-07-22_16-05-53/my_first_package/stderr.log
  File "/home/jhw0178/ros2_2026_summer_study/ros_ws/install/my_first_package/lib/python3.12/site-packages/my_first_package/my_param.py", line 16
    def parameter_callback(self, param: list{Parameter}):
                                        ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

